lang/examples/good/04_print.gt
fn main() -> int {
    print("Integers:   ", 42, '\n');
    print("Booleans:   ", true, '\n');
    print("Characters: ", 'c', '\n');
    print("Strings:    ", "Hello, World!\n");

    return 0;
}
