lang/examples/bad/UndeclaredVariable.gt
fn main() -> int {
    var x = y;
    return 0;
}
